<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/testId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtAdressSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/strAdrs"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAdress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAdressSide"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/strAdrs" />

            <TextView
                android:id="@+id/txtDescSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAdress"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/strDesc"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDescSide"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/strDesc" />

            <TextView
                android:id="@+id/txtViewPriceDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/red_button"
                android:text="@string/strViewPrice" />

            <TextView
                android:id="@+id/txtAmminSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtViewPriceDetails"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/strAmen"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAmminDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAmminSide"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/strAmen" />

            <TextView
                android:id="@+id/txtDocumentSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAmminDetails"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="10dp"
                android:text="@string/strDoc"
                android:textSize="14sp"
                android:textStyle="bold" />

            <com.meetme.android.horizontallistview.HorizontalListView
                android:id="@+id/documentHorizontalListView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/txtDocumentSide"
                />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>